<resources>
    <string name="app_name">Outflow</string>

    <string name="settings">Settings</string>


    <string name="login_single">Enter your password</string>
    <string name="change_password">Change password</string>
    <string name="set_up_password">Set up your password</string>
    <string name="track_your_expenses">TRACK YOUR EXPENSES</string>

    <string name="track_group_expenses">TRACK GROUP EXPENSES</string>
    <string name="invited">INVITED? SIGN IN</string>
    <string name="add_bill">ADD BILL</string>
    <string name="deny">Deny</string>
    <string name="confirm">Confirm</string>
    <string name="wants_to_be_friends">wants to be friends with you. \nThis means that all your finances will be  \nmerged together into one.</string>
    <string name="invitation">Invitation to merge your finances</string>
    <string name="sign_in_with_gmail">SIGN IN WITH GMAIL</string>
    <string name="sign_in_with_email">SIGN IN WITH EMAIL</string>
    <string name="send_request">Send request</string>
    <string name="merge_your_finances">Merge your finances</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="merge_fincances_text">Here you can enter the email address \nof a person that you want to connect with.</string>
    <string name="invite_people">Invite People</string>
    <string name="set_date">Set date</string>
    <string name="delete_this_record">Delete this record</string>
    <string name="are_you_sure_that">Are you sure that you \nwant to delete this record?</string>
    <string name="cancel">Cancel</string>
    <string name="check_your_merge_requests">Check your merge requests</string>
    <string name="real_email">Please enter the real email address.</string>
    <string name="your_invitation_has_been_sent">Your invitation has been sent.</string>
    <string name="no_new_requests">You have no new requests.</string>
    <string name="your_groups">Your Groups</string>
    <string name="create_a_group">Create a group</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="group_successfully_created">Group successfully created.</string>
    <string name="empty_field">This field can\'t be empty!</string>
    <string name="invitation_to_join">Invitation to join</string>
    <string name="invite">Invite</string>
    <string name="email_error">Please enter real email address.</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="accept">Accept</string>
    <string name="title_activity_calendar_popup">CalendarPopup</string>
    <string name="no_entries_for_this_day">No entries for this day.</string>
    <string-array name="student_class">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
    </string-array>


</resources>
