<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".popups.InvitationPopup">


    <android.support.constraint.Guideline
        android:id="@+id/guidelinePopupTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelinePopupBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelinePopupLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelinePopupRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imgViewPopupBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_dark_color"
        app:layout_constraintBottom_toBottomOf="@id/guidelinePopupBottom"
        app:layout_constraintLeft_toLeftOf="@+id/guidelinePopupLeft"
        app:layout_constraintRight_toRightOf="@+id/guidelinePopupRight"
        app:layout_constraintTop_toTopOf="@+id/guidelinePopupTop">


        <android.support.constraint.Guideline
            android:id="@+id/guidelinePopupHeaderTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.195" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelinePopupHeaderBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.205" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blue_light_color"
            app:layout_constraintBottom_toBottomOf="@+id/guidelinePopupHeaderBottom"
            app:layout_constraintTop_toTopOf="@+id/guidelinePopupHeaderTop" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/invitation"
            android:textColor="@color/blue_light_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/guidelinePopupHeaderTop"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineButtonsTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineButtonsBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />


        <android.support.constraint.Guideline
            android:id="@+id/guidelineUserNameBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/txtViewUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|bottom"
            android:text="vladislav.lazic@gmail.com"
            android:textColor="@color/yellow_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineUserNameBottom"
            app:layout_constraintTop_toTopOf="@+id/guidelinePopupHeaderBottom" />


        <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/wants_to_be_friends"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineButtonsTop"
            app:layout_constraintTop_toTopOf="@+id/guidelineUserNameBottom" />


        <android.support.constraint.Guideline
            android:id="@+id/guidelineButtonsMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guidelineButtonsMiddle"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guidelineButtonsMiddle"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guidelineButtonsMiddle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/deny"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guidelineButtonsMiddle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>