<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".popups.CreateAGroupPopup">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePopupTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePopupBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePopupLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePopupRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgViewPopupBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_dark_color"
        app:layout_constraintBottom_toBottomOf="@id/guidelinePopupBottom"
        app:layout_constraintLeft_toLeftOf="@+id/guidelinePopupLeft"
        app:layout_constraintRight_toRightOf="@+id/guidelinePopupRight"
        app:layout_constraintTop_toTopOf="@+id/guidelinePopupTop">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupHeaderTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.195" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupHeaderBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.205" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blue_light_color"
            app:layout_constraintBottom_toBottomOf="@+id/guidelinePopupHeaderBottom"
            app:layout_constraintTop_toTopOf="@+id/guidelinePopupHeaderTop" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/create_a_group"
            android:textColor="@color/blue_light_color"
            android:textSize="17sp"
            android:fontFamily="@font/oswald_regular"
            app:layout_constraintBottom_toBottomOf="@id/guidelinePopupHeaderTop"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonsTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineUserNameTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />


        <EditText
            android:id="@+id/editTextGroupName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/group_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/oswald_light"
            android:textColor="#ffff00"
            android:textColorHint="#898906"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineUserNameTop"
            app:layout_constraintTop_toTopOf="@+id/guidelinePopupHeaderBottom" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineInvitationCodeTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />

            <me.grantland.widget.AutofitTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
                android:fontFamily="@font/oswald_light"
            android:text="This is the invitation code that you share \nin order for people to join this group:"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toTopOf="@+id/guidelineInvitationCodeTop"
            app:layout_constraintTop_toBottomOf="@+id/editTextGroupName" />


        <me.grantland.widget.AutofitTextView
            android:id="@+id/txtViewInvitationCode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:fontFamily="@font/oswald_light"
            android:textIsSelectable="true"
            android:text="-LhsusguydayyuaGa"
            android:textColor="@color/yellow_color"
            app:layout_constraintBottom_toTopOf="@+id/guidelineButtonsTop"
            app:layout_constraintTop_toBottomOf="@+id/guidelineInvitationCodeTop" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineButtonLeft"
            app:layout_constraintRight_toRightOf="@+id/guidelineButtonRight"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


        <me.grantland.widget.AutofitTextView
            android:id="@+id/txtViewCreateAGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/create"
            android:fontFamily="@font/oswald_regular"
            android:textColor="@color/white_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineButtonLeft"
            app:layout_constraintRight_toRightOf="@+id/guidelineButtonRight"
            app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>